# Healthcare_FinalProject

./: .gitmodules  README.md
main device/: Untitled.rtf
main device/awsLex/: CMakeLists.txt  README.md
main device/awsLex/appleAudio/: appleAudio.cpp  appleAudio.h
main device/awsLex/deepspeech/inc/: deepspeech.h
main device/awsLex/include/: deep.h  lexSpeech.h  soxAudio.h  vad.h
main device/awsLex/linuxAudio/: linuxAudio.cpp  linuxAudio.h
main device/awsLex/src/: deepspeech.cpp  lexSpeech.cpp  main.cpp  soxAudio.cpp  testVad.cpp  vad.cpp
main device/mailroom/: aws.go  go.mod  main.go
main device/poseDetection/: helperTools.py  pose_estimation.py
test code/YOLOv8-TensorRT-CPP/: CMakeLists.txt
test code/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/src/: engine.cpp
test code/YOLOv8-TensorRT-CPP/scripts/: pytorch2onnx.py
test code/YOLOv8-TensorRT-CPP/src/: globals.h  object_detection_video_stream.cpp  pose_detection_video_stream.cpp  yolov8.h
test code/openpose_tensorRT/: CMakeLists.txt
test code/openpose_tensorRT/cmake/: FindTensorRT.cmake
test code/openpose_tensorRT/inc/: openpose.h
test code/openpose_tensorRT/libs/tensorrt-cpp-api/: CMakeLists.txt
test code/openpose_tensorRT/libs/tensorrt-cpp-api/src/: engine.cpp  engine.h
test code/openpose_tensorRT/src/: main.cpp
test code/pose_detection_with_boundingbox/: CMakeLists.txt
test code/pose_detection_with_boundingbox/libs/tensorrt-cpp-api/src/: engine.cpp
test code/pose_detection_with_boundingbox/src/: main.cpp  tlite.cpp  tlite.h  yolov8.cpp  yolov8.h
test code/tensorflow_movenet/: CMakeLists.txt
test code/tensorflow_movenet/inc/: classifier.h  movenet_tools.h  personLayout.h
test code/tensorflow_movenet/numpyC++/: numpy_tools.cpp  numpy_tools.h
test code/tensorflow_movenet/src/: classifier.cpp  main.cpp  movenet_tools.cpp  visualisation_tools.cpp
